Make defaultDescription and applicationDescription use the handler's leafname if no description is set.  Bug 190409, r=pkw@us.ibm.com, sr=darin